--- a/SquarePeg.WebHost/Views/Shared/_Layout.cshtml
+++ b/SquarePeg.WebHost/Views/Shared/_Layout.cshtml
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
+    <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.min.css" rel="stylesheet">
     @Scripts.Render("~/bundles/modernizr")
+    <script src="/Scripts/mixpanel.js"></script>
 </head>
 <body>
     @RenderBody()
 
     @Scripts.Render("~/bundles/jquery")
+    <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
