--- a/SquarePeg.WebHost/Views/Shared/_Layout.cshtml
+++ b/SquarePeg.WebHost/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link href="http://netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.min.css" rel="stylesheet">
     @Scripts.Render("~/bundles/modernizr")
     <script src="/Scripts/mixpanel.js"></script>
+    <script src="/Scripts/google-analytics.js"></script>
 </head>
 <body>
     @RenderBody()
