--- a/SquarePeg.WebHost/Views/Home/Index.cshtml
+++ b/SquarePeg.WebHost/Views/Home/Index.cshtml
@@ -3,3 +3,10 @@
 }
 
 <h2>Index</h2>
+
+@section scripts
+{
+    <script language="javascript">
+        mixpanel.track('Home Page');
+        </script>
+}
