--- a/SquarePeg.WebHost/Views/Home/Index.cshtml
+++ b/SquarePeg.WebHost/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
 <body data-spy="scroll" data-target=".navbar">
     <div class="container">
         <div class="masthead">
-            <h3 class="muted">SquarePeg</h3>
+
             <div class="navbar">
                 <div class="navbar-inner">
                     <div class="container">
@@ -29,9 +29,9 @@
             </div>
         </div>
         <div class="jumbotron" id="home">
-            <h1>Coming Soon</h1>
-            <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <a class="btn btn-large btn-success" href="#">Get started today</a>
+            <h1><i class="icon-puzzle-piece"></i>&nbsp;SquarePeg</h1>
+            <p class="lead">Creatively manage your projects, your team, your business and your life with easy to understand data and insights.</p>
+            <a class="btn btn-large btn-success" href="#">Sign up today</a>
         </div>
         <hr>
         <div class="row-fluid" id="about">
